# StockMarket

./: CMakeLists.txt  README.md  main.cpp
src/checkers/: StockMarketChecker.cpp  StockMarketChecker.h
src/helpers/: exceptions.h  helpers.h
src/models/StockMarketV1/: StockMarketV1.cpp  StockMarketV1.h
src/models/StockMarketV2/: StockMarketV2.cpp  StockMarketV2.h
